<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory
    android:dependency="@string/pref_key_muzei_integration"
    android:key="@string/pref_key_category_general"
    android:title="@string/pref_title_general">

  </PreferenceCategory>


  <PreferenceCategory
    android:key="@string/pref_key_category_integrations"
    android:title="@string/pref_title_integrations">

    <com.tasomaniac.android.widget.IntegrationPreference
      android:defaultValue="true"
      android:key="@string/pref_key_muzei_integration"
      android:summaryOff="@string/pref_summary_muzei_installed"
      android:summaryOn="@string/pref_summary_muzei_not_installed"
      android:title="@string/pref_title_muzei_integration">
      <intent
        android:targetClass="com.google.android.apps.muzei.MuzeiActivity"
        android:targetPackage="net.nurik.roman.muzei"/>
    </com.tasomaniac.android.widget.IntegrationPreference>

  </PreferenceCategory>

</PreferenceScreen>
